Archive2/c0/40377135ca49cd/output
main.cpp:4:39: error: expected '(' after 'static_cast'
    long int t = static_cast<long int> time(NULL);
                                      ^
                                      (
1 error generated.
